--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -22,6 +22,9 @@ FROM nginx:alpine
 # Copier les fichiers construits dans le répertoire de Nginx
 COPY --from=build /app/build /usr/share/nginx/html
 
+# Copier la configuration Nginx personnalisée
+COPY nginx.conf /etc/nginx/nginx.conf
+
 # Exposer le port 80 pour le serveur Nginx
 EXPOSE 80
 
