--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         cd frontend
-        npm install
+        rm -rf node_modules
+        npm ci
 
     - name: Build project
       run: |
