--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'  # Utilise la version 18 de Node.js
+        node-version: '18'
 
     - name: Install dependencies
       run: |
