--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,15 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Install frontend dependencies
+    - name: Clean npm cache and install dependencies
       run: |
         cd frontend
+        npm cache clean --force
         rm -rf node_modules
-        npm ci
+        rm -rf package-lock.json
+        npm install
 
-    - name: Build frontend
+    - name: Build project
       run: |
         cd frontend
         npm run build
