--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,17 @@ jobs:
         npm cache clean --force
         rm -rf node_modules
         rm -rf package-lock.json
-        npm install
+        npm ci
 
     - name: Debug - List node_modules
       run: |
         cd frontend
         ls -la node_modules
+
+    - name: Debug - Check react-scripts
+      run: |
+        cd frontend
+        ls -la node_modules/.bin
 
     - name: Build project
       run: |
@@ -53,9 +58,6 @@ jobs:
         echo "194.164.72.129 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBHLUNnOiOrhWFLNvsctdrbBfYLW/EJ9E62qjZ7Urwq+J7KNb57q4J1AuksAnPzqwc+F4XaQyhGofbAwbB+WgFbo=" >> ~/.ssh/known_hosts
         echo "194.164.72.129 ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBA1Z6txW4yD6sYZ8HK3SyzUEmIn88vD5nOPwH6nGG/a" >> ~/.ssh/known_hosts
 
-    - name: Create target directory on VPS
-      run: ssh root@194.164.72.129 'mkdir -p /root/CRESSON'
-
     - name: Copy build archive to VPS
       run: |
         scp frontend/build.tar.gz root@194.164.72.129:/root/CRESSON
@@ -63,8 +65,12 @@ jobs:
     - name: Extract build archive on VPS and restart Docker
       run: |
         ssh root@194.164.72.129 << 'EOF'
+        if [ ! -d "/root/CRESSON" ]; then
+          mkdir -p /root/CRESSON
+        fi
+        tar -xzf /root/CRESSON/build.tar.gz -C /root/CRESSON --strip-components=1
+        rm /root/CRESSON/build.tar.gz
         cd /root/CRESSON
-        tar -xzf build.tar.gz
         docker-compose down
         docker-compose up -d
         EOF
