--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.77.6",
     "sitemap": "^8.0.0",
+    "svgo": "^3.3.2",
     "web-vitals": "^4.2.0",
     "workbox-background-sync": "^7.1.0",
     "workbox-broadcast-update": "^7.1.0",
