--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         cd frontend
         npm cache clean --force
         rm -rf node_modules
-        npm ci
+        npm install
 
     - name: Debug - List node_modules
       run: |
