--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,15 +4,18 @@ FROM python:3.9
 # Définir le répertoire de travail
 WORKDIR /app
 
-# Copier les fichiers requirements.txt et installer les dépendances
+# Copier requirements.txt et installer les dépendances
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-# Copier le reste des fichiers du projet
+# Copier le reste des fichiers de l'application
 COPY . .
 
-# Exposer le port 5000 pour le backend
+# Copier le fichier .env
+COPY .env .env
+
+# Exposer le port 5000
 EXPOSE 5000
 
-# Commande pour lancer gunicorn
+# Commande pour démarrer l'application
 CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
