--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,19 @@ services:
     environment:
       - FLASK_ENV=production
     command: gunicorn --bind 0.0.0.0:5000 app:app
+    depends_on:
+      - db
+
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: dbname
+      POSTGRES_USER: username
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
