Ajout manage.py

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,6 +75,7 @@ jobs:
         python3 -m venv venv
         source venv/bin/activate
         pip install -r requirements.txt
+        source venv/bin/activate  # Assurez-vous que l'environnement virtuel est actif
         python manage.py create_db
         EOF
 
