--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
         python3 -m venv venv
         source venv/bin/activate
         pip install -r requirements.txt
+        pip install --upgrade pip
 
     - name: Archive project directory
       run: |
@@ -75,7 +76,7 @@ jobs:
         python3 -m venv venv
         source venv/bin/activate
         pip install -r requirements.txt
-        ./venv/bin/python manage.py create_db
+        ./venv/bin/python3.10 manage.py create_db
         EOF
 
     - name: Start Docker services
