--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         cd backend
         python3 -m venv venv
-        ./venv/bin/pip3.10 install -r requirements.txt
+        ./venv/bin/pip install -r requirements.txt
 
     - name: Archive project directory
       run: |
@@ -72,8 +72,8 @@ jobs:
         rm project.tar.gz
         cd backend
         python3 -m venv venv
-        ./venv/bin/pip3.10 install -r requirements.txt
-        ./venv/bin/python3.10 manage.py create_db
+        ./venv/bin/pip install -r requirements.txt
+        ./venv/bin/python manage.py create_db
         EOF
 
     - name: Start Docker services
