--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,12 @@ services:
       - "5000"
     environment:
       - FLASK_ENV=production
-      - DATABASE_URI=${DATABASE_URI}
+      - DATABASE_URI=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      - EMAIL_USER=${EMAIL_USER}
+      - EMAIL_PASS=${EMAIL_PASS}
+      - SMTP_SERVER=${SMTP_SERVER}
+      - SMTP_PORT=${SMTP_PORT}
+      - RECEIVER_EMAIL=${RECEIVER_EMAIL}
     command: gunicorn --bind 0.0.0.0:5000 app:app
     depends_on:
       - db
@@ -30,7 +35,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "5433:5455"  # Utiliser un autre port pour éviter les conflits
+      - "5433:5432"  # Utiliser un autre port pour éviter les conflits
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
