--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,13 @@ services:
       - "5000"
     environment:
       - FLASK_ENV=production
-      - DATABASE_URI=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - EMAIL_USER=${EMAIL_USER}
       - EMAIL_PASS=${EMAIL_PASS}
       - SMTP_SERVER=${SMTP_SERVER}
       - SMTP_PORT=${SMTP_PORT}
       - RECEIVER_EMAIL=${RECEIVER_EMAIL}
-    command: gunicorn --bind 0.0.0.0:5000 app:app
+    command: bash -c "flask db upgrade && gunicorn --bind 0.0.0.0:5000 app:create_app()"
     depends_on:
       - db
 
@@ -35,7 +35,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "5433:5432"  # Utiliser un autre port pour éviter les conflits
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
