--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,15 +39,15 @@ jobs:
         cd /root/CRESSON
         tar -xzf project.tar.gz
         rm project.tar.gz
-        export POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-        export POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-        export POSTGRES_DB=${{ secrets.POSTGRES_DB }}
-        export EMAIL_USER=${{ secrets.EMAIL_USER }}
-        export EMAIL_PASS=${{ secrets.EMAIL_PASS }}
-        export SMTP_SERVER=${{ secrets.SMTP_SERVER }}
-        export SMTP_PORT=${{ secrets.SMTP_PORT }}
-        export RECEIVER_EMAIL=${{ secrets.RECEIVER_EMAIL }}
-        export DATABASE_URI=${{ secrets.DATABASE_URI }}
+        echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
+        echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+        echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
+        echo "EMAIL_USER=${{ secrets.EMAIL_USER }}" >> .env
+        echo "EMAIL_PASS=${{ secrets.EMAIL_PASS }}" >> .env
+        echo "SMTP_SERVER=${{ secrets.SMTP_SERVER }}" >> .env
+        echo "SMTP_PORT=${{ secrets.SMTP_PORT }}" >> .env
+        echo "RECEIVER_EMAIL=${{ secrets.RECEIVER_EMAIL }}" >> .env
+        echo "DATABASE_URI=postgresql+psycopg2://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@db:5432/${{ secrets.POSTGRES_DB }}" >> .env
         docker-compose down
         docker-compose up -d
         sleep 10  # Attendre quelques secondes pour que les conteneurs démarrent
