--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,23 +16,15 @@ services:
       dockerfile: Dockerfile
     expose:
       - "5000"
-    environment:
-      - FLASK_ENV=production
-      - SQLALCHEMY_DATABASE_URI=${DATABASE_URI}
-      - EMAIL_USER=${EMAIL_USER}
-      - EMAIL_PASS=${EMAIL_PASS}
-      - SMTP_SERVER=${SMTP_SERVER}
-      - SMTP_PORT=${SMTP_PORT}
-      - RECEIVER_EMAIL=${RECEIVER_EMAIL}
+    env_file:
+      - .env
     depends_on:
       - db
 
   db:
     image: postgres:latest
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    env_file:
+      - .env
     ports:
       - "5433:5432"
     volumes:
