--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,23 @@ services:
       dockerfile: Dockerfile
     expose:
       - "5000"
-    env_file:
-      - .env
+    environment:
+      - FLASK_ENV=production
+      - SQLALCHEMY_DATABASE_URI=${DATABASE_URI}
+      - EMAIL_USER=${EMAIL_USER}
+      - EMAIL_PASS=${EMAIL_PASS}
+      - SMTP_SERVER=${SMTP_SERVER}
+      - SMTP_PORT=${SMTP_PORT}
+      - RECEIVER_EMAIL=${RECEIVER_EMAIL}
     depends_on:
       - db
 
   db:
     image: postgres:latest
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - "5433:5432"
     volumes:
