--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name webcresson;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -9,8 +9,7 @@ server {
         try_files $uri /index.html;
     }
 
-    # Configuration pour les API backend si nécessaire
-    location /api/ {
+    location /contact { # Assurez-vous que cela correspond à l'endpoint de votre API
         proxy_pass http://backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
