--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       dockerfile: Dockerfile
     expose:
       - "5000"
+    env_file:
+      - .env
     environment:
       - FLASK_ENV=production
       - SQLALCHEMY_DATABASE_URI=${DATABASE_URI}
