--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,7 +1,11 @@
 server {
     listen 80;
     server_name webcresson.com;
-    return 301 https://$host$request_uri;
+
+    # Redirect HTTP to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
@@ -11,7 +15,6 @@ server {
     ssl_certificate /etc/letsencrypt/live/webcresson.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/webcresson.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -20,8 +23,9 @@ server {
         try_files $uri /index.html;
     }
 
-    location /contact {
-        proxy_pass http://localhost:5000;
+    # Proxy to backend
+    location /api/ {
+        proxy_pass http://backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
