--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name webcresson.com;
 
-    # Redirect HTTP to HTTPS
+    # Redirige toutes les requêtes HTTP vers HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
