--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,7 @@ jobs:
 
     - name: Extract project archive on VPS and set up environment
       run: |
-        ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
-        set -e  # Arrêter le script si une commande échoue
+        ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'bash -s' <<'EOF'
         rm -rf /root/CRESSON
         mkdir -p /root/CRESSON
         tar -xzf /root/project.tar.gz -C /root/CRESSON
