--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "80:80"
-      - "443:443"
+      - "8080:80"  # Utilisez le port 8080 pour le frontend
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
+      - ./default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
 
