--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "8080:80"  # Utilisez le port 8080 pour le frontend
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/default.conf:/etc/nginx/conf.d/default.conf  # Monter le fichier directement depuis le répertoire frontend
     depends_on:
       - backend
 
