--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:80"  # Utilisez le port 8080 pour le frontend
+      - "8443:443"  # Assurez-vous que le port 443 est également mappé
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
       - ./frontend/default.conf:/etc/nginx/conf.d/default.conf  # Monter le fichier directement depuis le répertoire frontend
