--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -19,6 +19,8 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    access_log /var/log/nginx/access.log;
+
     location / {
         try_files $uri /index.html;
     }
