--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -14,7 +14,7 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/webcresson.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/webcresson.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
+    #include /etc/letsencrypt/options-ssl-nginx.conf;
 
     root /usr/share/nginx/html;
     index index.html;
