--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name webcresson.com;
+    server_name webcresson.com www.webcresson.com;
 
     # Redirige toutes les requêtes HTTP vers HTTPS
     location / {
@@ -10,11 +10,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name webcresson.com;
+    server_name webcresson.com www.webcresson.com;
 
     ssl_certificate /etc/letsencrypt/live/webcresson.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/webcresson.com/privkey.pem;
-    #include /etc/letsencrypt/options-ssl-nginx.conf;
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
 
     root /usr/share/nginx/html;
     index index.html;
