--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -2,9 +2,12 @@ server {
     listen 80;
     server_name webcresson.com www.webcresson.com;
 
-    # Redirige toutes les requêtes HTTP vers HTTPS
     location / {
-        return 301 https://$host$request_uri;
+        proxy_pass http://127.0.0.1:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
@@ -14,20 +17,9 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/webcresson.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/webcresson.com/privkey.pem;
-    # include /etc/letsencrypt/options-ssl-nginx.conf;
-
-    root /usr/share/nginx/html;
-    index index.html;
-
-    access_log /var/log/nginx/access.log;
 
     location / {
-        try_files $uri /index.html;
-    }
-
-    # Proxy to backend
-    location /api/ {
-        proxy_pass http://backend:5000;
+        proxy_pass http://127.0.0.1:8443;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
