--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,25 +1,33 @@
 server {
     listen 80;
-    server_name webcresson.com www.webcresson.com;
+    server_name webcresson.com;
 
+    # Redirige toutes les requêtes HTTP vers HTTPS
     location / {
-        proxy_pass http://127.0.0.1:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        return 301 https://$host$request_uri;
     }
 }
 
 server {
     listen 443 ssl;
-    server_name webcresson.com www.webcresson.com;
+    server_name webcresson.com;
 
     ssl_certificate /etc/letsencrypt/live/webcresson.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/webcresson.com/privkey.pem;
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    access_log /var/log/nginx/access.log;
 
     location / {
-        proxy_pass http://127.0.0.1:8443;
+        try_files $uri /index.html;
+    }
+
+    # Proxy to backend
+    location /api/ {
+        proxy_pass http://backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
