--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name webcresson.com www.webcresson.com;
+    server_name webcresson.com;
 
     # Redirige toutes les requêtes HTTP vers HTTPS
     location / {
@@ -10,7 +10,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name webcresson.com www.webcresson.com;
+    server_name webcresson.com;
 
     ssl_certificate /etc/letsencrypt/live/webcresson.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/webcresson.com/privkey.pem;
