--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -26,7 +26,7 @@ server {
         try_files $uri /index.html;
     }
 
-    # Proxy to backend
+    # Proxy to backend for API requests
     location /api/ {
         proxy_pass http://backend:5000;
         proxy_set_header Host $host;
@@ -35,7 +35,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Endpoint for the contact form
+    # Proxy to backend for contact form
     location /contact {
         proxy_pass http://backend:5000/contact;
         proxy_set_header Host $host;
