--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -22,6 +22,7 @@ server {
 
     access_log /var/log/nginx/access.log;
 
+    # Serve the frontend application
     location / {
         try_files $uri /index.html;
     }
