✨ feat: Ajout de la Page Enigme + Implémentation du LM pour l'analyse des cookies
- 📝 Ajout d'une nouvelle page 'Enigme' dans le frontend.
- 🤖 Implémentation d'un modèle de machine learning pour l'analyse des cookies.
- 📈 Intégration de MLflow pour le suivi et la gestion du modèle.
- 🔄 Configuration des routes backend pour gérer les requêtes d'analyse des cookies.
- 🐳 Mise à jour de la configuration Docker pour inclure le serveur de suivi MLflow.
- 🔧 Amélioration des paramètres CORS pour prendre en charge la communication frontend-backend.

Cette mise à jour introduit une nouvelle page pour les défis énigme et utilise le ML pour améliorer l'analyse de la sécurité des cookies.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,10 @@ Flask-Script
 gunicorn
 python-dotenv
 psycopg2-binary
+
+requests
+beautifulsoup4
+selenium
+ChromeDriverManager
+mlflow
+setuptools
