--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - ./frontend/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./frontend/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - backend
 
@@ -24,6 +24,7 @@ services:
       - .env
     depends_on:
       - db
+      - mlflow
 
   db:
     image: postgres:latest
@@ -36,5 +37,19 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  mlflow:
+    image: mlflow/mlflow
+    environment:
+      - MLFLOW_TRACKING_URI=http://mlflow:5002
+      - BACKEND_STORE_URI=${DATABASE_URI}
+      - ARTIFACT_ROOT=/mlflow/artifacts
+    ports:
+      - "5000:5000"
+    volumes:
+      - mlflow:/mlflow
+    depends_on:
+      - db
+
 volumes:
   postgres_data:
+  mlflow:
