--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,26 @@
     "@babel/plugin-transform-optional-chaining": "^7.21.0",
     "@babel/plugin-transform-private-methods": "^7.21.0",
     "@babel/plugin-transform-private-property-in-object": "^7.21.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.5",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "babel": "^6.23.0",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.6",
     "sitemap": "^8.0.0",
     "svgo": "^3.3.2",
