--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,9 +37,9 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   mlflow:
-    image: mlflow/mlflow:1.30.0
+    image: bitnami/mlflow:latest
     ports:
-      - "5001:5000"
+      - "5001:5002"
     environment:
       - MLFLOW_TRACKING_URI=http://mlflow:5002
     volumes:
