--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,11 @@ jobs:
         echo "RECEIVER_EMAIL=${{ secrets.RECEIVER_EMAIL }}" >> .env
         echo "DATABASE_URI=postgresql+psycopg2://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@db:5432/${{ secrets.POSTGRES_DB }}" >> .env
 
+    - name: Set up .env file for frontend
+      run: |
+        mkdir -p frontend
+        echo "REACT_APP_SECRET_KEY=${{ secrets.REACT_APP_SECRET_KEY }}" > frontend/.env
+
     - name: Build Docker images
       run: docker-compose build
 
@@ -64,6 +69,8 @@ jobs:
         echo "SMTP_PORT=${{ secrets.SMTP_PORT }}" >> .env
         echo "RECEIVER_EMAIL=${{ secrets.RECEIVER_EMAIL }}" >> .env
         echo "DATABASE_URI=postgresql+psycopg2://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@db:5432/${{ secrets.POSTGRES_DB }}" >> .env
+        mkdir -p frontend
+        echo "REACT_APP_SECRET_KEY=${{ secrets.REACT_APP_SECRET_KEY }}" > frontend/.env
         docker-compose down
         docker-compose up -d
         sleep 10  # Attendre quelques secondes pour que les conteneurs démarrent
